-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.5
-
None
-
3b6a83b55 (dev), 59b39ae89 (6.4), 2f6b81b5e (6.5)
When node has a longer description or more properties, content doesn't fit into add node dialog. See the attachement. To fix, make the dialog right side also scrollable.
| For Gerrit Dashboard: QTBUG-110945 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 458673,2 | Improve AddNodeDialog UI | dev | qt/qtquickeffectmaker | Status: MERGED | +2 | 0 |
| 459003,2 | Improve AddNodeDialog UI | 6.5 | qt/qtquickeffectmaker | Status: MERGED | +2 | 0 |
| 459004,2 | Improve AddNodeDialog UI | 6.4 | qt/qtquickeffectmaker | Status: MERGED | +2 | 0 |