Improve AddNodeDialog UI

Make the right side scrollable, add bordering for the properties and
fix the defines appearing correctly.

Task-number: QTBUG-110945
Pick-to: 6.5 6.4
Change-Id: I641d18328851fd09343a14028eeb35d41c11b838
Reviewed-by: Tomi Korpipää <tomi.korpipaa@qt.io>
Reviewed-by: Amr Elsayed <amr.elsayed@qt.io>